delay_issue, trigger_issue

--- a/app/views/einvoices/result.html.erb
+++ b/app/views/einvoices/result.html.erb
@@ -1,13 +1,15 @@
-<p>
-  <%= @data %>
-</p>
+<div class="col-md-10 col-md-offset-1">
+  <p>
+    <%= @data %>
+  </p>
 
-<p>
-  <%= @result %>
-</p>
+  <p>
+    <%= @result %>
+  </p>
 
-<p>
-  <%= @error_msg %>
-</p>
+  <p>
+    <%= @error_msg %>
+  </p>
 
-<%= link_to 'Index', root_path, class: "btn btn-primary" %>
+  <%= link_to 'Index', root_path, class: "btn btn-primary" %>
+</div>
