--- a/app/views/einvoices/show.html.erb
+++ b/app/views/einvoices/show.html.erb
@@ -1,26 +1,43 @@
 <div class="col-md-12">
-  <h2><%= @einvoice.invoice_number %></h2>
+  <h2>
+    <% if @einvoice.order_number.present? %>
+      <%= "Delay Issue " << @einvoice.order_number %>
+    <% else %>
+      <%= "Issue " << @einvoice.invoice_number %>
+    <% end %>
+  </h2>
   <ul>
     <% @einvoice.as_json.keys.each do |key| %>
-      <li><%= key.titleize %>：<%= @einvoice[key] %></li>
+      <% if @einvoice[key].present? %>
+        <li><%= key.titleize %>：<%= @einvoice[key] %></li>
+      <% end %>
     <% end %>
   </ul>
   <br>
 
-  <%= link_to 'Index', root_path, class: "btn btn-primary" %>
-  <%= link_to 'Notify', notify_einvoice_path(@einvoice.id), class: "btn btn-success" %>
-  <% if @einvoice.status == 'issue' %>
-    <%= link_to("Invalid", issue_invalid_einvoice_path(@einvoice.id), class: "btn btn-danger", method: :get, data: { confirm: "Are you sure?" } ) %>
-    <%= link_to("Query", query_issue_einvoice_path(@einvoice.id), class: "btn btn-success" ) %>
-  <% end %>
-  <% if @einvoice.status == 'issue_invalid' %>
-    <%= link_to("Query Invalid", query_issue_invalid_einvoice_path(@einvoice.id), class: "btn btn-success" ) %>
-  <% end %>
-  <% if @einvoice.status != 'issue_invalid' %>
-    <%= link_to("Allowance", edit_einvoice_path(@einvoice.id), class: "btn btn-warning" ) %>
-  <% end %>
-  <% if @einvoice.status == 'allowance' %>
-    <%= link_to("Allowance Invalid", einvoice_credit_notes_path(@einvoice.id), class: "btn btn-danger" ) %>
-    <%= link_to("Query", query_issue_einvoice_path(@einvoice.id), class: "btn btn-success" ) %>
-  <% end %>
+  <p>
+    <%= link_to 'Index', root_path, class: "btn btn-primary" %>
+    <% if @einvoice.status == 'issue_invalid' %>
+      <%= link_to("Query Invalid", query_issue_invalid_einvoice_path(@einvoice.id), class: "btn btn-success" ) %>
+    <% end %>
+  <p>
+    <% if @einvoice.status == 'issue' %>
+      <%= link_to("Query", query_issue_einvoice_path(@einvoice.id), class: "btn btn-success" ) %>
+      <%= link_to("Invalid", issue_invalid_einvoice_path(@einvoice.id), class: "btn btn-danger", method: :get, data: { confirm: "Are you sure?" } ) %>
+    <% end %>
+    <% if @einvoice.status == 'issue' || @einvoice.status == 'allowance' %>
+      <%= link_to("Allowance", edit_einvoice_path(@einvoice.id), class: "btn btn-warning" ) %>
+    <% end %>
+    <% if @einvoice.status == 'issue' || @einvoice.status == 'allowance'|| @einvoice.status == 'allowance_invalid' %>
+      <%= link_to("Allowance List", einvoice_credit_notes_path(@einvoice.id), class: "btn btn-primary" ) %>
+    <% end %>
+  </p>
+  <p>
+    <% if @einvoice.status != 'delay_issue' && @einvoice.status != 'trigger_issue' %>
+      <%= link_to 'Notify', notify_einvoice_path(@einvoice.id), class: "btn btn-success" %>
+    <% end %>
+    <% if @einvoice.status == 'delay_issue' %>
+      <%= link_to 'Trigger Issue', trigger_issue_einvoice_path(@einvoice.id), class: "btn btn-danger", method: :get, data: { confirm: "Are you sure?" } %>
+    <% end %>
+  </p>
 </div>
