update css primary for link, success for action

--- a/app/views/einvoices/_form.html.erb
+++ b/app/views/einvoices/_form.html.erb
@@ -9,6 +9,6 @@
     <%= f.input :item_price,     input_html: { class: "form-control", value: "44|55|66" } %>
   </div>
   <br>
-  <%= f.submit "Submit", class: "btn btn-primary" %>
-  <%= link_to 'Index', root_path, class: "btn btn-success" %>
+  <%= f.submit "Submit", class: "btn btn-success" %>
+  <%= link_to 'Index', root_path, class: "btn btn-primary" %>
 <% end %>
