--- a/app/views/einvoices/delay.html.erb
+++ b/app/views/einvoices/delay.html.erb
@@ -18,7 +18,7 @@
       <%= f.input :notify_url,          input_html: { class: "form-control" } %>
     </div>
     <br>
-    <%= f.submit "Submit", class: "btn btn-primary" %>
-    <%= link_to 'Index', root_path, class: "btn btn-success" %>
+    <%= f.submit "Submit", class: "btn btn-success" %>
+    <%= link_to 'Index', root_path, class: "btn btn-primary" %>
   <% end %>
 </div>
