--- a/app/views/einvoices/notify.html.erb
+++ b/app/views/einvoices/notify.html.erb
@@ -9,7 +9,7 @@
       <%= f.input :notified,     input_html: { class: "form-control" }, collection: [['通知客戶', 'C'], ['通知廠商', 'M'], ['皆發送', 'M']] %>
     </div>
     <br>
-    <%= f.submit "Submit", class: "btn btn-primary" %>
-    <%= link_to 'Index', root_path, class: "btn btn-success" %>
+    <%= f.submit "Submit", class: "btn btn-success" %>
+    <%= link_to 'Index', root_path, class: "btn btn-primary" %>
   <% end %>
 </div>
