--- a/app/views/einvoices/result.html.erb
+++ b/app/views/einvoices/result.html.erb
@@ -8,7 +8,7 @@
   </p>
 
   <p>
-    <%= @error_msg %>
+    <%= @error_msg.html_safe %>
   </p>
 
   <%= link_to 'Index', root_path, class: "btn btn-primary" %>
